.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Objective__c.object
<CustomObject>
    <description>Records Objectives for Employee Reviews</description>
    <fields>
        <fullName>xcdhcm__Action__c</fullName>
        <description>To record the detail objective</description>
        <label>Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company goal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Company_Objectives__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Company_Objectives__c</referenceTo>
        <relationshipLabel>Employees with Objective</relationshipLabel>
        <relationshipName>Objective</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Emp_Ass_Notes__c</fullName>
        <label>xNotes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Emp_Ass_Rating__c</fullName>
        <description>This is the rating that the employee has given themselves for the objective.</description>
        <inlineHelpText>Please rate how you feel you have met this objective on a scale of 1 to 5.</inlineHelpText>
        <label>Employee rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Review__c</fullName>
        <label>Review</label>
        <referenceTo>xcdhcm__Employee_Review__c</referenceTo>
        <relationshipLabel>Objective</relationshipLabel>
        <relationshipName>Objective</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <formula>xcdhcm__Employee_Review__r.xcdhcm__Employee_Details__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee_Review__r.xcdhcm__Employee_leaving_date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_notes__c</fullName>
        <label>Employee notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee_Review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee_Review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c , 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Employee_Review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c  
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_Notes__c</fullName>
        <label>xResults</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_Rating__c</fullName>
        <description>Please rate performance vs. the objective on a scale of 1 to 5</description>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <formula>xcdhcm__Employee_Review__r.xcdhcm__Employee_Details__r.xcdhcm__Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_notes1__c</fullName>
        <label>Manager notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Performance_Criteria__c</fullName>
        <label>Success measure</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Results__c</fullName>
        <label>Results</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_period__c</fullName>
        <formula>text(xcdhcm__Employee_Review__r.xcdhcm__Review_Length__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_date__c</fullName>
        <formula>xcdhcm__Employee_Review__r.xcdhcm__Prob_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <label>Objective</label>
    <nameField>
        <label>Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>